--- a/Result-new.html
+++ b/Result-new.html
@@ -319,8 +319,8 @@ localStorage.setItem("archetype", topArchetype);
 
   // IMAGE FIXES
   if (topArchetype === "Claimed & Trained") fileSafe = "claimed__trained";
-  if (topArchetype === "The Punish Me") fileSafe = "the_punish_me";
-  if (topArchetype === "The Provoker") fileSafe = "the_provoker";
+  if (topArchetype === "Punish Me") fileSafe = "the_punish_me";
+  if (topArchetype === "Provoker") fileSafe = "the_provoker";
 
   const imagePath = `images/${fileSafe}_${genderSuffix}.jpg`;
   const profilePath = `/premium/erotic-blueprint_${
