--- a/Profile-verified.html
+++ b/Profile-verified.html
@@ -485,105 +485,21 @@
   </div>
 <script>
 document.addEventListener("DOMContentLoaded", function () {
-  const archetype = localStorage.getItem("archetype") || "Mood Multiplier";
+  const archetype = (localStorage.getItem("archetype") || "Mood Multiplier").trim();
 
   const autofillMap = {
-    "Devoted Darling": {
-      "enjoys": "passionate",
-      "foreplay": "adored",
-      "dirtyTalk": "praise",
-      "lookingFor": "love",
-      "sugarDynamic": "no",
-      "threesome": "no"
-    },
-    "Mood Multiplier": {
-      "enjoys": "passionate",
-      "foreplay": "adored",
-      "dirtyTalk": "teasing",
-      "lookingFor": "love",
-      "sugarDynamic": "no",
-      "threesome": "maybe"
-    },
-    "Tender Protector": {
-      "enjoys": "passionate",
-      "foreplay": "adored",
-      "dirtyTalk": "praise",
-      "lookingFor": "love",
-      "sugarDynamic": "no",
-      "threesome": "no"
-    },
-    "Heatwave": {
-      "enjoys": "passionate",
-      "foreplay": "ego_stroked",
-      "dirtyTalk": "teasing",
-      "lookingFor": "let_it_evolve",
-      "sugarDynamic": "no",
-      "threesome": "maybe"
-    },
-    "Promiscuous Plaything": {
-      "enjoys": "toys",
-      "foreplay": "ego_stroked",
-      "dirtyTalk": "filthy",
-      "lookingFor": "good_time",
-      "sugarDynamic": "yes",
-      "threesome": "hell_yes"
-    },
-    "Generous Giver": {
-      "enjoys": "passionate",
-      "foreplay": "adored",
-      "dirtyTalk": "praise",
-      "lookingFor": "let_it_evolve",
-      "sugarDynamic": "no",
-      "threesome": "maybe"
-    },
-    "Bedroom Adventurer": {
-      "enjoys": "toys",
-      "foreplay": "ego_stroked",
-      "dirtyTalk": "filthy",
-      "lookingFor": "good_time",
-      "sugarDynamic": "yes",
-      "threesome": "hell_yes"
-    },
-    "Charmer in Charge": {
-      "enjoys": "toys",
-      "foreplay": "ego_stroked",
-      "dirtyTalk": "teasing",
-      "lookingFor": "let_it_evolve",
-      "sugarDynamic": "yes",
-      "threesome": "yes"
-    },
-    "Punish Me": {
-      "enjoys": "bdsm",
-      "foreplay": "put_in_place",
-      "dirtyTalk": "degradation",
-      "lookingFor": "good_time",
-      "sugarDynamic": "yes",
-      "threesome": "hell_yes"
-    },
-    "Provoker": {
-      "enjoys": "bdsm",
-      "foreplay": "ego_stroked",
-      "dirtyTalk": "filthy",
-      "lookingFor": "good_time",
-      "sugarDynamic": "yes",
-      "threesome": "hell_yes"
-    },
-    "Dungeon Master": {
-      "enjoys": "bdsm",
-      "foreplay": "put_in_place",
-      "dirtyTalk": "filthy",
-      "lookingFor": "let_it_evolve",
-      "sugarDynamic": "no",
-      "threesome": "yes"
-    },
-    "Claimed & Trained": {
-      "enjoys": "bdsm",
-      "foreplay": "obeyed",
-      "dirtyTalk": "degradation",
-      "lookingFor": "love",
-      "sugarDynamic": "no",
-      "threesome": "maybe"
-    }
+    "Devoted Darling": { enjoys: "passionate", foreplay: "adored", dirtyTalk: "praise", lookingFor: "love", sugarDynamic: "no", threesome: "no" },
+    "Mood Multiplier": { enjoys: "passionate", foreplay: "adored", dirtyTalk: "teasing", lookingFor: "love", sugarDynamic: "no", threesome: "maybe" },
+    "Tender Protector": { enjoys: "passionate", foreplay: "adored", dirtyTalk: "praise", lookingFor: "love", sugarDynamic: "no", threesome: "no" },
+    "Heatwave": { enjoys: "passionate", foreplay: "ego_stroked", dirtyTalk: "teasing", lookingFor: "let_it_evolve", sugarDynamic: "no", threesome: "maybe" },
+    "Promiscuous Plaything": { enjoys: "toys", foreplay: "ego_stroked", dirtyTalk: "filthy", lookingFor: "good_time", sugarDynamic: "yes", threesome: "hell_yes" },
+    "Generous Giver": { enjoys: "passionate", foreplay: "adored", dirtyTalk: "praise", lookingFor: "let_it_evolve", sugarDynamic: "no", threesome: "maybe" },
+    "Bedroom Adventurer": { enjoys: "toys", foreplay: "ego_stroked", dirtyTalk: "filthy", lookingFor: "good_time", sugarDynamic: "yes", threesome: "hell_yes" },
+    "Charmer in Charge": { enjoys: "toys", foreplay: "ego_stroked", dirtyTalk: "teasing", lookingFor: "let_it_evolve", sugarDynamic: "yes", threesome: "yes" },
+    "Punish Me": { enjoys: "bdsm", foreplay: "put_in_place", dirtyTalk: "degradation", lookingFor: "good_time", sugarDynamic: "yes", threesome: "hell_yes" },
+    "Provoker": { enjoys: "bdsm", foreplay: "ego_stroked", dirtyTalk: "filthy", lookingFor: "good_time", sugarDynamic: "yes", threesome: "hell_yes" },
+    "Dungeon Master": { enjoys: "bdsm", foreplay: "put_in_place", dirtyTalk: "filthy", lookingFor: "let_it_evolve", sugarDynamic: "no", threesome: "yes" },
+    "Claimed & Trained": { enjoys: "bdsm", foreplay: "obeyed", dirtyTalk: "degradation", lookingFor: "love", sugarDynamic: "no", threesome: "maybe" }
   };
 
   const formatArchetypeURL = (name) => {
@@ -608,11 +524,11 @@ document.addEventListener("DOMContentLoaded", function () {
     "Claimed & Trained": "red"
   };
 
-  // Apply background
+  // Background color
   const roomClass = roomMap[archetype];
   if (roomClass) document.body.classList.add(roomClass);
 
-  // Update archetype link
+  // Set archetype link
   const correctedSlug = formatArchetypeURL(archetype);
   const archetypeLink = document.getElementById("archetypeLink");
   if (archetypeLink) {
@@ -629,7 +545,7 @@ document.addEventListener("DOMContentLoaded", function () {
     });
   }
 
-  // Progress display
+  // Progress
   const circle = document.getElementById('progressCircle');
   if (circle) circle.textContent = "33%";
 });
