--- a/Result-new.html
+++ b/Result-new.html
@@ -326,9 +326,9 @@ localStorage.setItem("archetype", topArchetype);
   const profilePath = `/premium/erotic-blueprint_${
   topArchetype === "Claimed & Trained"
     ? "claimed_and_trained"
-    : topArchetype === "The Punish Me"
+    : topArchetype === "Punish Me"
     ? "punish_me"
-    : topArchetype === "The Provoker"
+    : topArchetype === "Provoker"
     ? "provoker"
     : fileSafe
 }.html`;
