--- a/Profile-verified.html
+++ b/Profile-verified.html
@@ -485,27 +485,29 @@
   </div>
 <script>
 document.addEventListener("DOMContentLoaded", function () {
-  const archetype = (localStorage.getItem("archetype") || "Mood Multiplier").trim();
+  let stored = localStorage.getItem("archetype") || "Mood Multiplier";
+  stored = stored.trim();
 
-  const autofillMap = {
-    "Devoted Darling": { enjoys: "passionate", foreplay: "adored", dirtyTalk: "praise", lookingFor: "love", sugarDynamic: "no", threesome: "no" },
-    "Mood Multiplier": { enjoys: "passionate", foreplay: "adored", dirtyTalk: "teasing", lookingFor: "love", sugarDynamic: "no", threesome: "maybe" },
-    "Tender Protector": { enjoys: "passionate", foreplay: "adored", dirtyTalk: "praise", lookingFor: "love", sugarDynamic: "no", threesome: "no" },
-    "Heatwave": { enjoys: "passionate", foreplay: "ego_stroked", dirtyTalk: "teasing", lookingFor: "let_it_evolve", sugarDynamic: "no", threesome: "maybe" },
-    "Promiscuous Plaything": { enjoys: "toys", foreplay: "ego_stroked", dirtyTalk: "filthy", lookingFor: "good_time", sugarDynamic: "yes", threesome: "hell_yes" },
-    "Generous Giver": { enjoys: "passionate", foreplay: "adored", dirtyTalk: "praise", lookingFor: "let_it_evolve", sugarDynamic: "no", threesome: "maybe" },
-    "Bedroom Adventurer": { enjoys: "toys", foreplay: "ego_stroked", dirtyTalk: "filthy", lookingFor: "good_time", sugarDynamic: "yes", threesome: "hell_yes" },
-    "Charmer in Charge": { enjoys: "toys", foreplay: "ego_stroked", dirtyTalk: "teasing", lookingFor: "let_it_evolve", sugarDynamic: "yes", threesome: "yes" },
-    "Punish Me": { enjoys: "bdsm", foreplay: "put_in_place", dirtyTalk: "degradation", lookingFor: "good_time", sugarDynamic: "yes", threesome: "hell_yes" },
-    "Provoker": { enjoys: "bdsm", foreplay: "ego_stroked", dirtyTalk: "filthy", lookingFor: "good_time", sugarDynamic: "yes", threesome: "hell_yes" },
-    "Dungeon Master": { enjoys: "bdsm", foreplay: "put_in_place", dirtyTalk: "filthy", lookingFor: "let_it_evolve", sugarDynamic: "no", threesome: "yes" },
-    "Claimed & Trained": { enjoys: "bdsm", foreplay: "obeyed", dirtyTalk: "degradation", lookingFor: "love", sugarDynamic: "no", threesome: "maybe" }
+  // If stored format is already slug (e.g. mood_multiplier), convert back
+  const slugToTitleMap = {
+    "devoted_darling": "Devoted Darling",
+    "mood_multiplier": "Mood Multiplier",
+    "tender_protector": "Tender Protector",
+    "heatwave": "Heatwave",
+    "promiscuous_plaything": "Promiscuous Plaything",
+    "generous_giver": "Generous Giver",
+    "bedroom_adventurer": "Bedroom Adventurer",
+    "charmer_in_charge": "Charmer in Charge",
+    "punish_me": "Punish Me",
+    "provoker": "Provoker",
+    "dungeon_master": "Dungeon Master",
+    "claimed_and_trained": "Claimed & Trained"
   };
 
+  // Use proper title if stored format is slug
+  const archetype = slugToTitleMap[stored] || stored;
+
   const formatArchetypeURL = (name) => {
-    if (name === "Claimed & Trained") return "claimed_and_trained";
-    if (name === "The Punish Me") return "punish_me";
-    if (name === "The Provoker") return "provoker";
     return name.toLowerCase().replace(/[^a-z0-9]+/g, "_");
   };
 
@@ -524,25 +526,17 @@ document.addEventListener("DOMContentLoaded", function () {
     "Claimed & Trained": "red"
   };
 
-  // Background color
+  // Set background
   const roomClass = roomMap[archetype];
   if (roomClass) document.body.classList.add(roomClass);
 
-  // Set archetype link
-  const correctedSlug = formatArchetypeURL(archetype);
+  // Set link
+  const slug = formatArchetypeURL(archetype);
   const archetypeLink = document.getElementById("archetypeLink");
   if (archetypeLink) {
     archetypeLink.textContent = archetype;
-    archetypeLink.href = `/premium/erotic-blueprint_${correctedSlug}.html`;
-  }
-
-  // Autofill sexual profile fields
-  const values = autofillMap[archetype];
-  if (values) {
-    ["enjoys", "foreplay", "dirtyTalk", "lookingFor", "sugarDynamic", "threesome"].forEach(fieldId => {
-      const el = document.getElementById(fieldId);
-      if (el) el.value = values[fieldId];
-    });
+    archetypeLink.href = `/premium/erotic-blueprint_${slug}.html`;
+    console.log("🔗 Link set to:", archetypeLink.href);
   }
 
   // Progress
