--- a/Profile-verified.html
+++ b/Profile-verified.html
@@ -278,11 +278,18 @@
   <div class="divider"></div>
   <div class="section-label">Sexual Profile</div>
 
-  <div class="field locked">
+<div class="field locked">
   <label>Your Sexual Archetype</label>
   <a id="archetypeLink" style="font-weight: bold; color: white; text-decoration: underline;" target="_blank">Mood Multiplier</a>
 </div>
 
+<div class="field" style="margin-top: 8px; text-align: center;">
+  <a id="blueprintLink"
+     target="_blank"
+     style="display: inline-block; margin-top: 6px; color: var(--gold); font-weight: bold; text-decoration: underline;">
+    → View Your Full Sexual Profile
+  </a>
+</div>
   <div class="field">
     <label>Enjoys</label>
     <select id="enjoys">
