--- a/quiz-new.html
+++ b/quiz-new.html
@@ -61,11 +61,12 @@
         </div>
 
         <div class="question">
-          <p>5. Are you looking for a sugar daddy/mama?</p>
-          <label><input type="radio" name="q5" value="5a"> Obviously</label>
-          <label><input type="radio" name="q5" value="5b"> If it came along I wouldn’t mind</label>
-          <label><input type="radio" name="q5" value="5c"> No thank you</label>
-          <label><input type="radio" name="q5" value="5d"> Are you kidding? I am the sugar daddy/mama!</label>
+          <p>5. How do you usually end up naked?</p>
+          <label><input type="radio" name="q5" value="5a"> I seduce, tease, and slowly take control</label>
+          <label><input type="radio" name="q5" value="5b"> I flirt until someone gets bold enough to rip my clothes off</label>
+          <label><input type="radio" name="q5" value="5c"> I act innocent until things suddenly… escalate</label>
+          <label><input type="radio" name="q5" value="5d"> I don’t know how it happens, but it happens a lot</label>
+          <label><input type="radio" name="q5" value="5e"> I never plan it, but let’s just say I never fight it either</label>
         </div>
 
         <div class="question">
@@ -77,11 +78,13 @@
         </div>
 
         <div class="question">
-          <p>7. Would you enjoy a threesome?</p>
-          <label><input type="radio" name="q7" value="7a"> Nope. My partner’s mine. Period.</label>
-          <label><input type="radio" name="q7" value="7b"> Maybe. Depends on the lighting and if anyone brought snacks</label>
-          <label><input type="radio" name="q7" value="7c"> Yeah it’d be fun</label>
-          <label><input type="radio" name="q7" value="7d"> Hell yeah! Why stop at 3? The more the merrier</label>
+          <p>7. Which best describes you?</p>
+          <label><input type="radio" name="q7" value="7a"> Dominant in the streets and a submissive in the sheets</label>
+          <label><input type="radio" name="q7" value="7b"> Submissive in the streets and dominant in the sheets</label>
+          <label><input type="radio" name="q7" value="7c"> No matter who I’m with, I’m in charge. I can’t help that I’m an alpha</label>
+          <label><input type="radio" name="q7" value="7d"> The fewer decisions I have to make, the more turned on I get</label>
+            <label><input type="radio" name="q7" value="7e"> I don’t play power games, i just want to have a good time and a great orgasm</label>
+          <label><input type="radio" name="q7" value="7f"> I’m a power bottom. I’ll seduce you into taking control… but only because I let you.</label>
         </div>
 
         <div class="question">
